feat: add model api generation
