# internal/handler/routers.go
@@ -1,0 +1,109 @@
+/*
+ * Ambulance Management API
+ *
+ * API contract for ambulance management modules including fleet and dispatch management.
+ *
+ * API version: 1.0.0
+ * Contact: xfedunchyk@stuba.sk, xskrypova@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package model
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Route is the information for every URI.
+type Route struct {
+	// Name is the name of this Route.
+	Name string
+	// Method is the string for the HTTP method. ex) GET, POST etc..
+	Method string
+	// Pattern is the pattern of the URI.
+	Pattern string
+	// HandlerFunc is the handler function of this route.
+	HandlerFunc gin.HandlerFunc
+}
+
+// NewRouter returns a new router.
+func NewRouter(handleFunctions ApiHandleFunctions) *gin.Engine {
+	return NewRouterWithGinEngine(gin.Default(), handleFunctions)
+}
+
+// NewRouter add routes to existing gin engine.
+func NewRouterWithGinEngine(router *gin.Engine, handleFunctions ApiHandleFunctions) *gin.Engine {
+	for _, route := range getRoutes(handleFunctions) {
+		if route.HandlerFunc == nil {
+			route.HandlerFunc = DefaultHandleFunc
+		}
+		switch route.Method {
+		case http.MethodGet:
+			router.GET(route.Pattern, route.HandlerFunc)
+		case http.MethodPost:
+			router.POST(route.Pattern, route.HandlerFunc)
+		case http.MethodPut:
+			router.PUT(route.Pattern, route.HandlerFunc)
+		case http.MethodPatch:
+			router.PATCH(route.Pattern, route.HandlerFunc)
+		case http.MethodDelete:
+			router.DELETE(route.Pattern, route.HandlerFunc)
+		}
+	}
+
+	return router
+}
+
+// Default handler for not yet implemented routes
+func DefaultHandleFunc(c *gin.Context) {
+	c.String(http.StatusNotImplemented, "501 not implemented")
+}
+
+type ApiHandleFunctions struct {
+
+	// Routes for the VehicleManagementAPI part of the API
+	VehicleManagementAPI VehicleManagementAPI
+}
+
+func getRoutes(handleFunctions ApiHandleFunctions) []Route {
+	return []Route{
+		{
+			"VehiclesGet",
+			http.MethodGet,
+			"/api/vehicles",
+			handleFunctions.VehicleManagementAPI.VehiclesGet,
+		},
+		{
+			"VehiclesPost",
+			http.MethodPost,
+			"/api/vehicles",
+			handleFunctions.VehicleManagementAPI.VehiclesPost,
+		},
+		{
+			"VehiclesVehicleIdDelete",
+			http.MethodDelete,
+			"/api/vehicles/:vehicleId",
+			handleFunctions.VehicleManagementAPI.VehiclesVehicleIdDelete,
+		},
+		{
+			"VehiclesVehicleIdGet",
+			http.MethodGet,
+			"/api/vehicles/:vehicleId",
+			handleFunctions.VehicleManagementAPI.VehiclesVehicleIdGet,
+		},
+		{
+			"VehiclesVehicleIdPut",
+			http.MethodPut,
+			"/api/vehicles/:vehicleId",
+			handleFunctions.VehicleManagementAPI.VehiclesVehicleIdPut,
+		},
+		{
+			"VehiclesVehicleIdStatusPatch",
+			http.MethodPatch,
+			"/api/vehicles/:vehicleId/status",
+			handleFunctions.VehicleManagementAPI.VehiclesVehicleIdStatusPatch,
+		},
+	}
+}
