# internal/model/model_vehicle_status_update_request.go
@@ -1,0 +1,15 @@
+/*
+ * Ambulance Management API
+ *
+ * API contract for ambulance management modules including fleet and dispatch management.
+ *
+ * API version: 1.0.0
+ * Contact: xfedunchyk@stuba.sk, xskrypova@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package model
+
+type VehicleStatusUpdateRequest struct {
+	Status VehicleStatus `json:"status"`
+}
